<resources>"
    <string name="app_name">app Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="brand_activity">Choose Your Brand</string>
    <string name="puma">Puma</string>
    <string name="adidas">Adidas</string>
    <string name="nike">Nike</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scarborough">Scarborough</string>
    <string name="northyork">NorthYork</string>
    <string name="markham">Markham</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
</resources>
