<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="45dp"
    tools:context=".Puma_Locate">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/puma" />

    <Button
        android:id="@+id/scar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:onClick="ClickButton"
        android:text="@string/scarborough"
        android:textSize="24sp" />

    <Button
        android:id="@+id/north"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:onClick="ClickButton"
        android:text="@string/northyork"
        android:textSize="24sp" />

    <Button
        android:id="@+id/markh"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:onClick="ClickButton"
        android:text="@string/markham"
        android:textSize="24sp" />

</LinearLayout>