<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DBACDE9"
    android:orientation="vertical"
    tools:context=".Brand_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="35dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="horizontal">

            <TextView
                android:id="@+id/pum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/puma"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:contentDescription="NikeImage"
                app:srcCompat="@drawable/puma" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/adidas"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/adidas" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/nike"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/nike" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>